--- a/views/res_config_views.xml
+++ b/views/res_config_views.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<odoo>
+<flectra>
     <data>
 
         <record id="res_config_settings_view_form" model="ir.ui.view">
@@ -29,4 +29,4 @@
         </record>
 
     </data>
-</odoo>
+</flectra>
